# moomin

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  Rakefile  cc  configure  rakefile
chaosweaver/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  chaosweaver-Info.plist  main.m
chaosweaver/Base.lproj/: Main_iPhone.storyboard
chaosweaver/Images.xcassets/AppIcon.appiconset/: Contents.json
chaosweaver/Shaders/: Shader.fsh  Shader.vsh
chaosweaverTests/: chaosweaverTests-Info.plist  chaosweaverTests.m
cmake/: cotire.cmake
example/: CMakeLists.txt  main.cpp
example/drawing/: GLContextHandler.cpp
example/util/: PathHelper.cpp
include/: Adder.h  Entity.h  Multiplier.h  System.h
include/core/: Core.h  Core.hpp  Vec2.h  Vec2.hpp
include/drawing/: EntityRenderer.h  EntityRenderer.hpp  FontProvider.h  FreeTypeRenderer.h  GLContextHandler.h  GLContextHandler.hpp  GLCoordinator.hpp  GLFWContextHandler.h  GLFWContextHandler.hpp  GLFWGLHandler.h  GLHandler.h  GLHandler.hpp  Mesh.h  Mesh.hpp  Renderer.h  Renderer.hpp  Text.h  WorldRenderer.hpp  shader.h  shader.hpp
include/model/: AABB.h  AABB.hpp  Circle.h  Circle.hpp  Collision.h  Collision.hpp  Entity.h  Entity.hpp  PhysicsHelper.h  PhysicsHelper.hpp  PhysicsSystem.h  PhysicsSystem.hpp  Rule.h  Rule.hpp  StandardPhysicsSystem.h  StandardPhysicsSystem.hpp
include/model/rules/: AccelerationRule.h  BoundingRule.h  BoundingRule.hpp  CollisionDetectionRule.h  CollisionRule.h  CollisionRule.hpp  DirectionAccelerationRule.h  DirectionAccelerationRule.hpp  EntityAccelerationRule.h  EntityAccelerationRule.hpp  GravityRule.h  PositionAccelerationRule.h  PositionAccelerationRule.hpp
include/util/: FloatingPointHelper.h  PathHelper.h  PathHelper.hpp
script/: generate-circle-mesh.rb
src/: CMakeLists.txt  System.cpp  main.cpp  multiplier.c
src/core/: Vec2.cpp
src/drawing/: EntityRenderer.cpp  FontProvider.cpp  FreeTypeRenderer.cpp  GLCoordinator.cpp  GLFWContextHandler.cpp  GLFWGLHandler.cpp  GLHandler.cpp  Mesh.cpp  Renderer.cpp  Text.cpp  Vec2.cpp  WorldRenderer.cpp  shader.cpp
src/model/: AABB.cpp  Circle.cpp  Collision.cpp  Entity.cpp  PhysicsHelper.cpp  PhysicsSystem.cpp  Rule.cpp  StandardPhysicsSystem.cpp
src/model/rules/: AccelerationRule.cpp  BoundingRule.cpp  CollisionDetectionRule.cpp  CollisionRule.cpp  DirectionAccelerationRule.cpp  EntityAccelerationRule.cpp  GravityRule.cpp  PositionAccelerationRule.cpp
src/shaders/: AABBFragmentShader.fragmentshader  AABBVertexShader.vertexshader  CircleFragmentShader.fragmentshader  CircleVertexShader.vertexshader  EntityFragmentShader.fragmentshader  EntityVertexShader.vertexshader
src/util/: FloatingPointHelper.cpp  PathHelper.cpp
test/: BanditWithGmock.h  CMakeLists.txt  MockAdder.h  banditrunner.cpp  main.cpp
test/drawing/: Mesh.spec.cpp  Vec2.spec.cpp
test/include/: BanditWithGmock.h  BanditWithGmock.hpp  TestConstants.h  TestConstants.hpp
test/include/helper/: CustomMatchers.h
test/include/mock/: MockEntity.h  MockEntity.hpp  MockRule.h  MockRule.hpp  MockVec2.h  MockVec2.hpp
test/model/: Circle.spec.cpp  Entity.spec.cpp  PhysicsSystem.spec.cpp  Rule.spec.cpp
test/spec/drawing/: Mesh.spec.cpp  Vec2.spec.cpp
test/spec/model/: AABB.spec.cpp  Circle.spec.cpp  Collision.spec.cpp  Entity.spec.cpp  PhysicsSystem.spec.cpp  Rule.spec.cpp
test/spec/model/rules/: AccelerationRule.spec.cpp  BoundingRule.spec.cpp  CollisionDetectionRule.spec.cpp  CollisionRule.spec.cpp  DirectionAccelerationRule.spec.cpp  EntityAccelerationRule.spec.cpp  PositionAccelerationRule.spec.cpp
test/spec/util/: FloatingPointHelper.spec.cpp  PathHelper.spec.cpp
